--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site wide configuration
 
-title: Site Title
+title: Meeshu Agnihotri
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
+  name: Meeshu Agnihotri
+  avatar: headshot.jpg
   bio: "A brief description of yourself."
   email: #emailaddress
   # Do not include the @ symbol in your Twitter username
-  twitter: #username
+  twitter: meeagnihotri
   linkedin: #username
   github: #username
   orcid: # ID Number (ex. 0000-0000-0000-0000)
