--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Meeshu Agnihotri
   avatar: headshot.jpg
-  bio: "A brief description of yourself."
+  bio: "2nd year PhD Student at University of California Irvine"
   email: #emailaddress
   # Do not include the @ symbol in your Twitter username
   twitter: meeagnihotri
